# cosmos-rust-bot

./: .dockerignore  .gitmodules  Cargo.toml  DISCLAIMER.txt  Dockerfile_build  Dockerfile_run  README.md  cosmos-rust-bot-feature-list.json  ctlscript.sh  helper_build_script.sh  helper_run_script.sh  install.sh  roadmap.txt  run.sh  run_show_user_input.sh  stop.sh  terra-rust-bot.json
assets/: README.md
assets/cw20/: contracts.json  custom.json  pairs.dex.json  pairs.json  tokens.json
install/: README.md  install.sh
src/: control.rs  errors.txt  lazy_bot.rs  main.rs  simple_user_input.rs
src/account/: wallet.rs
src/agent/auto_borrow/: mod.rs
src/agent/auto_claim_airdrop/: mod.rs
src/agent/auto_farm/: mod.rs
src/agent/auto_repay/: mod.rs
src/agent/auto_stake/: mod.rs
src/bot/: mod.rs
src/bot/action/: mod.rs
src/bot/auto_borrow/: mod.rs
src/bot/auto_farm/: mod.rs
src/bot/auto_repay/: mod.rs
src/bot/auto_stake/: mod.rs
src/collect/: mod.rs
src/collect/debug/: mod.rs
src/collect/errors/: mod.rs
src/collect/logs/: mod.rs
src/control/: mod.rs  view.rs
src/control/view/: interface.rs  model.rs  simple_view.rs
src/control/view/interface/: model.rs
src/control/view/interface/model/: services.rs  smart_contracts.rs
src/control/view/interface/model/services/: blockchain.rs
src/control/view/interface/model/services/blockchain/: smart_contracts.rs
src/control/view/interface/model/services/blockchain/smart_contracts/: objects.rs
src/control/view/interface/model/services/blockchain/smart_contracts/objects/: meta.rs
src/control/view/interface/model/services/blockchain/smart_contracts/objects/meta/: api.rs
src/control/view/interface/model/services/blockchain/smart_contracts/objects/meta/api/: data.rs
src/control/view/interface/model/services/blockchain/smart_contracts/objects/meta/api/data/: terra_contracts.rs
src/control/view/interface/model/smart_contracts/: meta.rs
src/control/view/interface/model/smart_contracts/meta/: api.rs
src/control/view/interface/model/smart_contracts/meta/api/: data.rs
src/control/view/model/: smart_contracts.rs
src/control/view/model/smart_contracts/meta/: api.rs
src/control/view/model/smart_contracts/meta/api/data/: terra_contracts.rs
src/control/view/simple_view/: model.rs
src/control/view/simple_view/model/smart_contracts/meta/: api.rs
src/control/view/simple_view/model/smart_contracts/meta/api/data/: endpoints.rs
src/info/anchor/account/: mod.rs
src/lazy_bot/: lazy_info.rs
src/lazy_bot/lazy_info/: lazy_logs.rs
src/lazy_bot/lazy_info/lazy_logs/: control.rs  display.rs
src/lazy_bot/lazy_info/lazy_logs/control/: view.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/: interface.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/: model.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/model/: requirements.rs  services.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/model/services/: blockchain.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/model/services/blockchain/: smart_contracts.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/model/services/blockchain/smart_contracts/: objects.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/model/services/blockchain/smart_contracts/objects/: meta.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/model/services/blockchain/smart_contracts/objects/meta/: api.rs
src/lazy_bot/lazy_info/lazy_logs/control/view/interface/model/services/blockchain/smart_contracts/objects/meta/api/data/: endpoints.rs  terra_contracts.rs  wallet.rs
src/logger/: mod.rs
src/logger/errors/: mod.rs
src/logger/logs/: mod.rs
src/logging/logs/: mod.rs
src/model/: mod.rs
src/model/requirements/: mod.rs
src/observer/: mod.rs
src/observer/anchor/: mod.rs
src/observer/anchor/account/: mod.rs
src/observer/anchor/general/: mod.rs
src/observer/market/general/: mod.rs
src/shared/: mod.rs
src/state/: control.rs  mod.rs
src/state/control/: model.rs
src/state/control/model/: requirements.rs  wallet.rs
src/ui/: mod.rs
src/ui/display/: mod.rs
src/ui/errors/: mod.rs
src/ui/info/: mod.rs
src/ui/info/anchor/account/: mod.rs
src/ui/info/anchor/general/: mod.rs
src/ui/info/arbitrage/: mod.rs
src/ui/info/auto_borrow/: mod.rs
src/ui/info/auto_claim_airdrop/: mod.rs
src/ui/info/auto_farm/: mod.rs
src/ui/info/auto_repay/: mod.rs
src/ui/info/auto_stake/: mod.rs
src/ui/info/market/general/: mod.rs
src/ui/logs/: mod.rs
src/view/: interface.rs  mod.rs
src/view/interface/: mod.rs
test/: install.sh
workspace/: Cargo.toml
workspace/cosmos-rust-bot/: Cargo.toml  README.md  cosmos-rust-bot-feature-list.json  cosmos-rust-bot.json  install.sh  stop.sh
workspace/cosmos-rust-bot/grants/: README.md
workspace/cosmos-rust-bot/install/: README.md  install.sh
workspace/cosmos-rust-bot/src/: main.rs
workspace/cosmos-rust-bot/src/account/: wallet.rs
workspace/cosmos-rust-bot/src/control/: mod.rs
workspace/cosmos-rust-bot/src/model/: mod.rs
workspace/cosmos-rust-bot/src/model/requirements/: mod.rs
workspace/miniserve/: Dockerfile_file_server
workspace/nginx-reverse-proxy/: Dockerfile_nginx_cors  README.md  nginx.conf
