[package]
name = "terra-rust-bot"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = "Lunatics understand the value that a powerful yield optimizing bot brings, as their ever-present gaze over the field of DeFi offers a strategic edge, and helps commanders keep their assets safe."
repository = "https://github.com/Philipp-Sc/terra-rust-bot"
version = "0.1.0"
edition = "2018"
 
[[bin]] 
name = "terra-rust-bot"

[dependencies]
terra-rust-api="1.1.8"
tokio = { version = "1.4", features = ["full"] }
anyhow="1.0"  
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"  
secp256k1 = { version = "0.20.3", default-features = false }
reqwest="0.11.6"   
chrono = "0.4"
enum-as-inner = "0.3.3"
schemars = { version = "0.8"}
cosmwasm-std = "0.16"
num-format = "0.4.0"
secstr = "0.4.0"
regex = "1.5.4"
colored = "2"
rand = "0.8.4"
num_cpus = "1.13.1" 

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3