[package]
name = "cosmos-rust-bot"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = ""
repository = "https://github.com/Philipp-Sc/cosmos-rust-bot"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "cosmos-rust-bot"

[dependencies]

cosmos-rust-interface = { path = "../cosmos-rust-interface" }
cosmos-rust-package = { path = "../cosmos-rust-package" }
#cosmos-rust-interface = { git = "https://github.com/Philipp-Sc/cosmos-rust-interface" }
cosmos-rust-bot-essentials = { path = "./packages/cosmos-rust-bot-essentials" }
tokio = { version = "1.18", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.12.2"
chrono = "0.4"
secstr = "0.4.0"
colored = "2"
num_cpus = "1.13.1"
rust_decimal_macros = "1.12.2"
enum-as-inner = "0.3.3"
#cosmwasm-bignumber = "2.2.0"
#cosmwasm-std-deprecated = { package = "cosmwasm-std", version = "=0.16.7" }
#cosmwasm-std-latest = { package = "cosmwasm-std", version = "^1.0.0" }
num-format = "0.4.0"
regex = "1.5.5"
litcrypt = "0.3"
crossbeam-channel = "0.4.0"
notify = "4.0.17"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3