[workspace]
members = [
    "cosmos-rust-bot",
    "cosmos-rust-interface",
    "cosmos-rust-package",
    "cosmos-rust-bot/packages/cosmos-rust-telegram-bot",
]

exclude = [
    "./rust-bert-fraud-detection/socket_ipc",
    "./rust-bert-fraud-detection/package",
    "./rust-openai-gpt-tools/socket_ipc",
    "./rust-openai-gpt-tools/package",
]

resolver = "2"

[workspace.dependencies]
cosmos-rust-interface = { path = "./cosmos-rust-interface" }
cosmos-rust-package = { path = './cosmos-rust-package' }

cosmrs = {path = "./cosmos-rust-development/cosmrs" }
cosmos-sdk-proto = { path = "./cosmos-rust-development/cosmos-sdk-proto" }
osmosis-proto = { path = "./cosmos-rust-development/osmosis-proto" }

rust-bert-fraud-detection-socket-ipc = { path = "./rust-bert-fraud-detection/socket_ipc" }
rust-openai-gpt-tools-socket-ipc = { path = "./rust-openai-gpt-tools/socket_ipc" }

chrono = "^0.4"
tokio = { version = "1.21.1" }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
sled = { version = "0.34.7" }
bincode = "1.3.3"
rust_decimal = "1.12.2"
strum = "0.24"
strum_macros = "0.24"
regex = "1.6.0"
enum-as-inner = "0.5.1"
heck = "0.4.0"
reqwest = "0.11.6"
hex = "0.4.3"
log = "0.4.14"
env_logger  = "0.9.3"
lazy_static = "1.4.0"
linkify = "0.9.0"

base64 = "0.13.0"
secp256k1 = "0.20.3"

#[patch.crates-io]
#"curve25519-dalek" = { git = 'https://github.com/signalapp/curve25519-dalek', branch = 'lizard2' }

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3

