[package]
name = "cosmos-rust-bot"
authors = ["Philipp Schlütermann <philipp.schluetermann@udo.edu>"]
description = ""
repository = "https://github.com/Philipp-Sc/cosmos-rust-bot"
version = "0.4.0"
edition = "2021"

[lib]
name = "bot_library"
path = "src/lib.rs"

[[bin]]
name = "cosmos-rust-bot"
required-features = ["build-binary"]


[features]
build-binary = ["cosmos-rust-interface", "cosmos-rust-package"]
# todo: further remove dependencies, that are not in the lib
# reason: bot_library is used by cosmos-rust-signal-bot, reduces the size of that package.

[dependencies]
"cosmos-rust-interface" = { path = '../cosmos-rust-interface', optional = true }
"cosmos-rust-package" = { path = '../cosmos-rust-package', optional = true }
#cosmos-rust-interface = { git = "https://github.com/Philipp-Sc/cosmos-rust-interface.git", optional = true }
#cosmos-rust-package = { git = "https://github.com/Philipp-Sc/cosmos-rust-package.git", optional = true }
tokio = { version = "1.21.1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.12.2"
chrono = "0.4"
secstr = "0.4.0"
colored = "2"
num_cpus = "1.13.1"
rust_decimal_macros = "1.12.2"
enum-as-inner = "0.3.3"
num-format = "0.4.0"
litcrypt = "0.3"
crossbeam-channel = "0.4.0"
notify = "4.0.17"
heck = "0.4.0"
regex = "1.6.0"
strum = "0.24"
strum_macros = "0.24"
sled = { version = "0.34.7", features = ["compression"] }
bincode = "1.3.3"
